Fixed layout bug in gutenberg style.css

--- a/gutenberg/assets/css/style.less
+++ b/gutenberg/assets/css/style.less
@@ -147,7 +147,7 @@
             }
         }
         &.ezrwp-grid-2 .ezrwp-col{
-            width: 50%;
+            width: 46%;
             @media @xs-hs{
                 width: 100%;
             }
@@ -156,7 +156,7 @@
             }
         }
         &.ezrwp-grid-3 .ezrwp-col{
-            width: 33.33%;
+            width: 29.33%;
             @media @sm{
                 width: 50%;
             }
@@ -168,7 +168,7 @@
             }
         }
         &.ezrwp-grid-4 .ezrwp-col{
-            width: 25%;
+            width: 21%;
             @media @md{
                 width: 33.33%;
             }
@@ -183,7 +183,7 @@
             }
         }
         &.ezrwp-grid-5 .ezrwp-col{
-            width: 20%;
+            width: 16%;
             @media @md{
                 width: 33.33%;
             }
@@ -198,7 +198,7 @@
             }
         }
         &.ezrwp-grid-6 .ezrwp-col{
-            width: 16.666%;
+            width: 12.666%;
             @media @md{
                 width: 33.33%;
             }
